--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "gtfs-realtime-bindings": "0.0.5",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.7",
     "morgan": "^1.10.0",
